--- a/autoinstall.yaml
+++ b/autoinstall.yaml
@@ -1,4 +1,4 @@
-#cloud-config
+#cloud-config Ubuntu Ame Digital
 autoinstall:
   # version is an Autoinstall required field.
   version: 1
@@ -8,7 +8,7 @@ autoinstall:
   packages:
     - ubuntu-desktop
 
-  # This adds the default snaps found on a 22.04 Ubuntu Desktop system.
+  # This adds the default snaps found on a 24.04 Ubuntu Desktop system.
   # Any desired additional snaps may also be listed here.
   snaps:
     - name: firefox
@@ -24,22 +24,22 @@ autoinstall:
   # 3. Prompt for user configuration on first boot.  Remove this identity
   #    section and see the "Installation without a default user" section.
   identity:
-    realname: ''
-    username: ubuntu
+    realname: 'Ame Digital'
+    username: admcorp.ame
     # A password hash is needed. `mkpasswd --method=SHA-512` can help.
     # mkpasswd can be found in the package 'whois'
-    password: '<password hash>'
-    hostname: ubuntu-desktop
+    password: 'Infr@c0rp@AME'
+    hostname: BR..OTNL....
 
   # Subiquity will, by default, configure a partition layout using LVM.
   # The 'direct' layout method shown here will produce a non-LVM result.
   storage:
     layout:
-      name: direct
+      name: lvm
 
   # Ubuntu Desktop uses the hwe flavor kernel by default.
   early-commands:
-    - echo 'linux-generic-hwe-22.04' > /run/kernel-meta-package
+    - echo 'linux-generic-hwe-24.04' > /run/kernel-meta-package
 
   # The live-server ISO does not contain some of the required packages,
   # such as ubuntu-desktop or the hwe kernel (or most of their depdendencies).
@@ -47,45 +47,17 @@ autoinstall:
   # proxy: http://192.168.0.1:3142
 
   late-commands:
-    # Enable the boot splash
-    - >-
-      curtin in-target --
-      sed -i /etc/default/grub -e
-      's/GRUB_CMDLINE_LINUX_DEFAULT=".*/GRUB_CMDLINE_LINUX_DEFAULT="quiet splash"/'
-    - curtin in-target -- update-grub
-
-    # Let NetworkManager handle network
-    - rm /target/etc/netplan/00-installer-config*yaml
-    - >-
-      printf "network:\n  version: 2\n  renderer: NetworkManager"
-      > /target/etc/netplan/01-network-manager-all.yaml
-
-    # Remove default filesystem and related tools not used with the suggested
-    # 'direct' storage layout.  These may yet be required if different
-    # partitioning schemes are used.
-    - >-
-      curtin in-target -- apt-get remove -y
-      btrfs-progs cryptsetup* lvm2 xfsprogs
-
-    # Remove other packages present by default in Ubuntu Server but not
-    # normally present in Ubuntu Desktop.
-    - >-
-      curtin in-target -- apt-get remove -y
-      ubuntu-server ubuntu-server-minimal
-      binutils byobu curl dmeventd finalrd gawk
-      kpartx mdadm ncurses-term needrestart open-iscsi openssh-server
-      sg3-utils ssh-import-id sssd thin-provisioning-tools vim tmux
-      sosreport screen open-vm-tools motd-news-config lxd-agent-loader
-      landscape-common htop git fonts-ubuntu-console ethtool
-
-    # Keep cloud-init, as it performs some of the installation on first boot.
-    - curtin in-target -- apt-get install -y cloud-init
-
-    # Finally, remove things only installed as dependencies of other things
-    # we have already removed.
-    - curtin in-target -- apt-get autoremove -y
-
-    # A postinstall script may optionally be used for further install
+      #Company Portal
+    - curl https://packages.microsoft.com/keys/microsoft.asc | gpg --dearmor > microsoft.gpg
+    - sudo install -o root -g root -m 644 microsoft.gpg /usr/share/keyrings/
+    - curl -o microsoft.list https://packages.microsoft.com/config/ubuntu/24.04/prod.list
+    - sudo mv ./microsoft.list /etc/apt/sources.list.d/microsoft-prod.list
+    - curl -sSL https://packages.microsoft.com/keys/microsoft.asc | gpg --dearmor | sudo tee /etc/apt/trusted.gpg.d/microsoft.gpg > /dev/null
+    - sudo sh -c 'echo "deb [arch=amd64] https://packages.microsoft.com/repos/edge stable main" > /etc/apt/sources.list.d/microsoft-edge-dev.list'
+    - sudo apt update && sudo apt install microsoft-edge-stable -y
+    - sudo apt install intune-portal -y
+    
+       # A postinstall script may optionally be used for further install
     # customization. Deploy this postinstall.sh script on the webserver.
     # - wget -O /target/postinstall.sh http://192.168.0.2/postinstall.sh
     # - curtin in-target -- bash /postinstall.sh
