--- a/autoinstall.yaml
+++ b/autoinstall.yaml
@@ -1,66 +1,26 @@
-#cloud-config Ubuntu Ame Digital
 autoinstall:
-  # version is an Autoinstall required field.
+
   version: 1
 
-  # This adds the default ubuntu-desktop packages to the system.
-  # Any desired additional packages may also be listed here.
-  packages:
-    - ubuntu-desktop
-
-  # This adds the default snaps found on a 24.04 Ubuntu Desktop system.
-  # Any desired additional snaps may also be listed here.
-  snaps:
-    - name: 
-  
-  # User creation can occur in one of 3 ways:
-  # 1. Create a user using this `identity` section.
-  # 2. Create users as documented in cloud-init inside the user-data section,
-  #    which means this single-user identity section may be removed.
-  # 3. Prompt for user configuration on first boot.  Remove this identity
-  #    section and see the "Installation without a default user" section.
-  identity:
-    realname: 'Ame Digital'
-    username: admcorp.ame
-    # A password hash is needed. `mkpasswd --method=SHA-512` can help.
-    # mkpasswd can be found in the package 'whois'
-    password: Infr@c0rp@AME
+    identity: Ame Digital
     hostname: BR..OTNL....
+    username: admcorp.ame
+    password: "$6$aNKiTGTiB1.9./Bi$xTqgQqLFN2385QM3cCV3EIBIps22nsBPR5IJIl42pVdQI6Tp58v/oE.opC6gQM/opNjJ4cO.KXzUlAjMhbRO.."
 
-  # Subiquity will, by default, configure a partition layout using LVM.
-  # The 'direct' layout method shown here will produce a non-LVM result.
-  storage:
+
+ storage:
     layout:
       name: lvm and encryption
+  
+snaps:
+      - name: code
+      classic: true
 
-  # Ubuntu Desktop uses the hwe flavor kernel by default.
-  early-commands:
-    - echo 'linux-generic-hwe-24.04' > /run/kernel-meta-package
-
-  # The live-server ISO does not contain some of the required packages,
-  # such as ubuntu-desktop or the hwe kernel (or most of their depdendencies).
-  # The system being installed will need some sort of apt access.
-  # proxy: http://192.168.0.1:3142
+  packages:
+    - vim
 
   late-commands:
-      #Company Portal
-    - curl https://packages.microsoft.com/keys/microsoft.asc | gpg --dearmor > microsoft.gpg
-    - sudo install -o root -g root -m 644 microsoft.gpg /usr/share/keyrings/
-    - curl -o microsoft.list https://packages.microsoft.com/config/ubuntu/24.04/prod.list
-    - sudo mv ./microsoft.list /etc/apt/sources.list.d/microsoft-prod.list
-    - curl -sSL https://packages.microsoft.com/keys/microsoft.asc | gpg --dearmor | sudo tee /etc/apt/trusted.gpg.d/microsoft.gpg > /dev/null
-    - sudo sh -c 'echo "deb [arch=amd64] https://packages.microsoft.com/repos/edge stable main" > /etc/apt/sources.list.d/microsoft-edge-dev.list'
-    - sudo apt update && sudo apt install microsoft-edge-stable -y
-    - sudo apt install intune-portal -y
-    
-       # A postinstall script may optionally be used for further install
-    # customization. Deploy this postinstall.sh script on the webserver.
-    # - wget -O /target/postinstall.sh http://192.168.0.2/postinstall.sh
-    # - curtin in-target -- bash /postinstall.sh
-    # - rm /target/postinstall.sh
-
-  # Additional cloud-init configuration affecting the target
-  # system can be supplied underneath a user-data section inside of
-  # autoinstall.
-  # user-data:
-  #   …
+    - curtin in-target -- apt update && sudo apt install microsoft-edge-stable -y
+    - curtin in-target -- apt install intune-portal -y
+    - curtin in-target -- apt-get update -y
+    - curtin in-target -- apt-get upgrade -y
