--- a/script2.yaml
+++ b/script2.yaml
@@ -19,7 +19,7 @@ autoinstall:
   packages:
     - vim
   late-commands:
-    - curtin in-target -- wget https://repo2.protonvpn.com/debian/dists/stable/main/binary-all/protonvpn-stable-release_1.0.3-3_all.deb
-    - curtin in-target -- dpkg -i ./protonvpn-stable-release_1.0.3-3_all.deb
+    - curtin in-target -- apt install intune-portal -y
+    - curtin in-target -- apt update && sudo apt install microsoft-edge-stable -y
     - curtin in-target -- apt update
-    - curtin in-target -- apt install -y proton-vpn-gnome-desktop
+   
