--- a/script2.yaml
+++ b/script2.yaml
@@ -1,7 +1,7 @@
 autoinstall:
   version: 1
   identity:
-    hostname: BR..OTNL....
+    hostname: BR__OTNL_____
     username: admcorp.ame
     password: "$6$aNKiTGTiB1.9./Bi$xTqgQqLFN2385QM3cCV3EIBIps22nsBPR5IJIl42pVdQI6Tp58v/oE.opC6gQM/opNjJ4cO.KXzUlAjMhbRO.."
   storage:
@@ -17,8 +17,11 @@ autoinstall:
     - name: code
       classic: true
   packages:
-    - vim
+  
   late-commands:
+    - curtin in-target -- curl https://packages.microsoft.com/keys/microsoft.asc | gpg --dearmor > microsoft.gpg
+    - curtin in-target -- install -o root -g root -m 644 microsoft.gpg /usr/share/keyrings/ 
+    - curtin in-target -- sh -c 'echo "deb [arch=amd64 signed-by=/usr/share/keyrings/microsoft.gpg] https://packages.microsoft.com/ubuntu/22.04/prod jammy main" > /etc/apt/sources.list.d/microsoft-ubuntu-jammy-prod.list'
     - curtin in-target -- apt install intune-portal -y
     - curtin in-target -- apt update && sudo apt install microsoft-edge-stable -y
     - curtin in-target -- apt update
