--- a/autoinstall.yaml
+++ b/autoinstall.yaml
@@ -20,4 +20,10 @@ snaps:
     - vim
 
   late-commands:
+
+ - curtin in-target -- apt install curl gpg
+ - curtin in-target -- curl https://packages.microsoft.com/keys/microsoft.asc | gpg --dearmor > microsoft.gpg
+ - curtin in-target -- sudo install -o root -g root -m 644 microsoft.gpg /usr/share/keyrings/ 
+ - curtin in-target -- sudo sh -c 'echo "deb [arch=amd64 signed-by=/usr/share/keyrings/microsoft.gpg] https://packages.microsoft.com/ubuntu/22.04/prod jammy main" > /etc/apt/sources.list.d/microsoft-ubuntu-jammy-prod.list' 
+ - curtin in-target --sudo rm microsoft.gpg
  
