--- a/autoinstall.yaml
+++ b/autoinstall.yaml
@@ -3,7 +3,7 @@ autoinstall:
   version: 1
 
     identity: Ame Digital
-    hostname: BR..OTNL....
+    hostname: BR__OTNL____
     username: admcorp.ame
     password: "$6$aNKiTGTiB1.9./Bi$xTqgQqLFN2385QM3cCV3EIBIps22nsBPR5IJIl42pVdQI6Tp58v/oE.opC6gQM/opNjJ4cO.KXzUlAjMhbRO.."
 
@@ -25,5 +25,7 @@ snaps:
  - curtin in-target -- curl https://packages.microsoft.com/keys/microsoft.asc | gpg --dearmor > microsoft.gpg
  - curtin in-target -- sudo install -o root -g root -m 644 microsoft.gpg /usr/share/keyrings/ 
  - curtin in-target -- sudo sh -c 'echo "deb [arch=amd64 signed-by=/usr/share/keyrings/microsoft.gpg] https://packages.microsoft.com/ubuntu/22.04/prod jammy main" > /etc/apt/sources.list.d/microsoft-ubuntu-jammy-prod.list' 
- - curtin in-target --sudo rm microsoft.gpg
+ - curtin in-target -- sudo rm microsoft.gpg
+ - curtin in-target -- sudo apt update
+ - curtin in-target --sudo apt install intune-portal
  
