--- a/autoinstall.yaml
+++ b/autoinstall.yaml
@@ -21,11 +21,18 @@ snaps:
 
   late-commands:
 
- - curtin in-target -- apt install curl gpg
- - curtin in-target -- curl https://packages.microsoft.com/keys/microsoft.asc | gpg --dearmor > microsoft.gpg
- - curtin in-target -- sudo install -o root -g root -m 644 microsoft.gpg /usr/share/keyrings/ 
- - curtin in-target -- sudo sh -c 'echo "deb [arch=amd64] https://packages.microsoft.com/repos/edge stable main" > /etc/apt/sources.list.d/microsoft-edge-dev.list'
- - curtin in-target -- sudo rm microsoft.gpg
- - curtin in-target -- sudo apt update
- - curtin in-target --sudo apt install intune-portal
+- curtin in-target -- curl https://packages.microsoft.com/keys/microsoft.asc | gpg --dearmor > microsoft.gpg
+- curtin in-target --sudo install -o root -g root -m 644 microsoft.gpg /usr/share/keyrings/
+- curtin in-target --curl -o microsoft.list https://packages.microsoft.com/config/ubuntu/22.04/prod.list
+- curtin in-target --sudo mv ./microsoft.list /etc/apt/sources.list.d/microsoft-prod.list
+- curtin in-target --curl -sSL https://packages.microsoft.com/keys/microsoft.asc | gpg --dearmor | sudo tee /etc/apt/trusted.gpg.d/microsoft.gpg > /dev/null
+- curtin in-target --sudo sh -c 'echo "deb [arch=amd64] https://packages.microsoft.com/repos/edge stable main" > /etc/apt/sources.list.d/microsoft-edge-dev.list'
+- curtin in-target --sudo rm microsoft.gpg
+- curtin in-target --sudo apt-get update -y
+- curtin in-target --sudo apt-get upgrade -y
+- curtin in-target --sudo apt update && sudo apt install microsoft-edge-stable -y
+- curtin in-target --sudo apt install intune-portal -y
+- curtin in-target --sudo apt-get update -y
+- curtin in-target --sudo apt-get upgrade -y
+
  
