Update and rename autoinstall (1).yaml to 1.yaml

--- a/1.yaml
+++ b/1.yaml
@@ -11,11 +11,7 @@ autoinstall:
   # This adds the default snaps found on a 22.04 Ubuntu Desktop system.
   # Any desired additional snaps may also be listed here.
   snaps:
-    - name: firefox
-    - name: gnome-3-38-2004
-    - name: gtk-common-themes
-    - name: snap-store
-    - name: snapd-desktop-integration
+    - name: 
 
   # User creation can occur in one of 3 ways:
   # 1. Create a user using this `identity` section.
@@ -24,8 +20,8 @@ autoinstall:
   # 3. Prompt for user configuration on first boot.  Remove this identity
   #    section and see the "Installation without a default user" section.
   identity:
-    realname: ''
-    username: ubuntu
+    realname: Ame Digital
+    username: admcorp.ame
     # A password hash is needed. `mkpasswd --method=SHA-512` can help.
     # mkpasswd can be found in the package 'whois'
     password: '<password hash>'
