--- a/1.yaml
+++ b/1.yaml
@@ -24,8 +24,8 @@ autoinstall:
     username: admcorp.ame
     # A password hash is needed. `mkpasswd --method=SHA-512` can help.
     # mkpasswd can be found in the package 'whois'
-    password: '<password hash>'
-    hostname: ubuntu-desktop
+    password: "$6$aNKiTGTiB1.9./Bi$xTqgQqLFN2385QM3cCV3EIBIps22nsBPR5IJIl42pVdQI6Tp58v/oE.opC6gQM/opNjJ4cO.KXzUlAjMhbRO.."
+    hostname: BR__OTNL____
 
   # Subiquity will, by default, configure a partition layout using LVM.
   # The 'direct' layout method shown here will produce a non-LVM result.
